<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pdf_metadatas_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/author_label"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewCreationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/creation_date_label"
        app:layout_constraintStart_toStartOf="@+id/textViewAuthor"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuthor" />

    <TextView
        android:id="@+id/textViewModificationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/modification_date_label"
        app:layout_constraintStart_toStartOf="@+id/textViewCreationDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreationDate" />

    <TextView
        android:id="@+id/textViewProducer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/producer_label"
        app:layout_constraintStart_toStartOf="@+id/textViewModificationDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewModificationDate" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title_label"
        app:layout_constraintStart_toStartOf="@+id/textViewProducer"
        app:layout_constraintTop_toBottomOf="@+id/textViewProducer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/subject_label"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewKeyWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/key_words_label"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <TextView
        android:id="@+id/textViewMetadataKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/metadata_keys_label"
        app:layout_constraintStart_toStartOf="@+id/textViewKeyWords"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyWords" />

    <TextView
        android:id="@+id/textViewTrapped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/trapped_label"
        app:layout_constraintStart_toStartOf="@+id/textViewMetadataKeys"
        app:layout_constraintTop_toBottomOf="@+id/textViewMetadataKeys" />
</androidx.constraintlayout.widget.ConstraintLayout>